--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -2,3 +2,15 @@ html,
 body {
   height: 100%;
 }
+.fl{
+  float: left;
+}
+.fr{
+  float: right;
+}
+li,
+img,
+label,
+input {
+  vertical-align: middle;
+}
