--- a/src/style/sass/home.scss
+++ b/src/style/sass/home.scss
@@ -38,6 +38,7 @@
     .tit {
       text-align: center;
       height: 60px;
+      box-shadow:0px 6px 10px rgba(0, 0, 0, .4);
     }
 
 
@@ -58,6 +59,24 @@
         font-size: .85rem;
         color: #fff;
       }
+    }
+
+  }
+  .gallery{
+    overflow: hidden;
+    height: 535px;
+    img{
+      max-height: 100%;
+      max-width: 100%;
+    }
+    .mint-swipe-indicators{
+       .is-active {
+         opacity: 1;
+         width: 6px;
+         height: 6px;
+         background: transparent;
+         border: 2px solid #ee5e4f;
+       }
     }
 
   }
