数据库：添加文档，用户表，订单表，购物车表  主页：完成

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -8,9 +8,24 @@ body {
 .fr{
   float: right;
 }
+.container{
+  overflow-x: hidden;
+  height: 100%;
+  padding-bottom: 1.386rem;
+}
 li,
 img,
 label,
 input {
   vertical-align: middle;
+}
+
+img{
+  display: block;
+  max-height: 100%;
+  margin: 0 auto;
+}
+a{
+  text-decoration: none;
+  color: black;
 }
