--- a/src/style/sass/home.scss
+++ b/src/style/sass/home.scss
@@ -29,7 +29,7 @@
         img {
           width: 100%;
           display: block;
-          max-height: 100%;
+          height: 100%;
           margin: 0 auto;
         }
       }
@@ -64,10 +64,12 @@
   }
   .gallery{
     overflow: hidden;
+    text-align: center;
+    width: 100%;
     height: 535px;
     img{
+      width: 100%;
       max-height: 100%;
-      max-width: 100%;
     }
     .mint-swipe-indicators{
        .is-active {
@@ -80,4 +82,124 @@
     }
 
   }
+
+  .advertisement{
+    .box{
+      display: flex;
+      height: 265px;
+      border-top: 2px solid #fff;
+      border-bottom: 2px solid #fff;
+    }
+    .left{
+      width: 50%;
+      // background: #464646;
+      a{
+        height: 100%;
+        display: block;
+        img {
+          width: 100%;
+          height: 100%;
+          display: block;
+        }
+      }
+
+    }
+    .right {
+      display: flex;
+      width: 50%;
+      border-left: 3px solid #fff;
+      // background: #43b6e4;
+      flex-direction: column;
+      .row{
+        height: 50%;
+      }
+      .row:last-child{
+        border-top: 2px solid #fff;
+        box-sizing: border-box;
+      }
+       img {
+         width: 100%;
+         height: 100%;
+         display: block;
+       }
+    }
+  }
+
+  .ad{
+    background: #fff;
+    text-align: left;
+    margin-bottom: 2px;
+    span{
+      padding: 0 24px;
+      line-height: 52px;
+      display: block;
+      font-size: 20px;
+      // line-height: 52px;
+    }
+    img{
+      width: 100%;
+    }
+  }
+  .comm {
+    .row{
+      display: flex;
+      a{
+        display: block;
+        padding: 24px  0;
+        .img{
+          padding: 6px;
+        }
+        img{
+          width: auto;
+          max-width: 100%;
+        }
+      }
+      .cell{
+        background: #f4f3ef;
+        width: 50%;
+        padding: 10px 0;
+        border-bottom: 2px solid #fff;
+        text-align: center;
+        &:first-child{
+          border-right: 2px solid #fff;
+        }
+        .text{
+          font-size: 14px;
+          line-height: 20px;
+        }
+        .describe{
+          display: flex;
+          flex-direction: column;
+        }
+        .price{
+          position: relative;
+          font-weight: bold;
+          color: #ef4f3d;
+          margin-top: 20px;
+          sup{
+            position: relative;
+            top: -.3em;
+            font-weight: normal;
+          }
+          del,.line{
+            color: #777;
+          }
+        }
+      }
+
+    }
+    .more {
+      background: #f4f3ef;
+
+      padding: 20px 0;
+      text-align: center;
+      font-size: 14px;
+
+      a {
+        color: #f35b4e;
+        display: block;
+      }
+    }
+  }
+
 }
