--- a/src/style/sass/catagory.scss
+++ b/src/style/sass/catagory.scss
@@ -36,6 +36,13 @@
             list-style: none;
       }
       .nub-jingji .nub-jingji-ul li img{width:2rem;}
+
+      .nub-jingji .nub-jingji-ul li p{
+        margin-top: 15px;
+        text-align: center;
+        color: #4f4f4f;
+      }
+      
       
       /*间隙*/
       .jianxi{height:3px;background-color:#eeeeee}
