--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -11,7 +11,14 @@ body {
 .container{
   overflow-x: hidden;
   height: 100%;
-  padding-bottom: 1.386rem;
+}
+.flexbox{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  .container{
+    flex: 1;
+  }
 }
 li,
 img,
