--- a/src/style/sass/goodDetail.scss
+++ b/src/style/sass/goodDetail.scss
@@ -8,4 +8,52 @@
     .iconcart{
         margin-right:.38rem;
     }
+    .xiangqingtu{
+        height:9.5rem;
+    }
+    .xiangqingtu img{
+        width: 90%;
+        height: 90%;
+        display: block;
+        max-height: 100%;
+        margin: 0 auto;
+    }
+    .jianxi{
+        height:4px;
+        background-color:#eeeeee;
+    }
+    .details{
+        padding:10px;
+    }
+    .detail-title{
+        font-size:.5rem;
+        
+    }
+    .detail-title .last-icon{
+        float:right;
+        margin-right:6px;
+    }
+    .detail-jiangjia{
+        margin-top:.5rem;
+    }
+    .jiaqian{
+        font-size:.5rem;
+        margin-top:10px;
+    }
+    .cuxiao{
+        font-size:.48rem;
+        margin-top:28px;
+        .zeng{
+            border:1px solid rgb(255, 77, 77);
+            color:rgb(255, 77, 77);
+        }
+        span{
+            font-size:12px;
+        }
+    }
+    .jianxi-zeng{
+        height:1px;
+        background-color:#eeeeee;
+    }
+
 }
