--- a/src/style/sass/tab.scss
+++ b/src/style/sass/tab.scss
@@ -2,11 +2,14 @@
   max-width: 720px;
   margin: 0px auto;
   z-index: 999;
-  background: #f4f3ef;
   height: 52px;
   margin: 0 auto;
+  &.mint-tabbar{
+  background: #f4f3ef;
+  }
   &.mint-tabbar a.is-selected {
     color: #f05d4b;
+    background: none;
   }
 
   div.mint-tab-item-label {
@@ -15,7 +18,7 @@
 
   .icon {
     display: block;
-    font-size: .666rem;
+    font-size: .7rem;
     text-align: center;
     height: .75rem;
     line-height: .75rem;
