--- a/src/style/sass/goodDetail.scss
+++ b/src/style/sass/goodDetail.scss
@@ -1,15 +1,17 @@
 .goodDetail{
     .mint-header {
-        height: 1.6rem;
+        height: 1.41rem;
         background-color: #fff;
         color: #464646;
-        font-size: .69rem;
+        font-size: .53rem;
       } 
     .iconcart{
         margin-right:.38rem;
     }
     .xiangqingtu{
         height:9.5rem;
+        box-sizing:border-box;
+        border-top:2px solid #eeeeee;
     }
     .xiangqingtu img{
         width: 90%;
@@ -17,16 +19,18 @@
         display: block;
         max-height: 100%;
         margin: 0 auto;
+        
     }
     .jianxi{
         height:4px;
         background-color:#eeeeee;
     }
     .details{
-        padding:10px;
+        padding:10px 0;
     }
     .detail-title{
         font-size:.5rem;
+        padding:0 10px;
         
     }
     .detail-title .last-icon{
@@ -35,14 +39,17 @@
     }
     .detail-jiangjia{
         margin-top:.5rem;
+        padding:0 10px;
     }
     .jiaqian{
         font-size:.5rem;
         margin-top:10px;
+        padding:0 10px;
     }
     .cuxiao{
         font-size:.48rem;
         margin-top:28px;
+        padding:0 10px;
         padding-bottom:8px;
         .zeng{
             border:1px solid rgb(255, 77, 77);
@@ -73,10 +80,92 @@
         .xianhuo{
             color:#FF4D4D;
         }
-        .good-color{
-                margin-top:8px;
-                
-            }
+        
     }
+    .good-color{
+        margin:8px 0; 
+    }
+    .select-color{
+        display:inline-block;
+        border-radius:14px;
+        border:1px solid #FF4D4D;
+        height:33px;
+        vertical-align:middle;
+        line-height: 35px;
+        padding:0 4px;
+        margin: 0 7px 7px 0 !important;
+        .color-dot{
+            border-radius:50%;
+            display:inline-block;
+            background:#000;
+            width:12px;
+            height:12px;
+            margin:0 3px 0 2px;
+        }
+    }
+    .good-spec{
+        margin:8px 0; 
+    }
+    .select-spec{
+        display:inline-block;
+        border-radius:14px;
+        border:1px solid #FF4D4D;
+        height:33px;
+        vertical-align:middle;
+        line-height: 35px;
+        margin: 0 7px 7px 0 !important;
+        padding:0 4px;
+    }
+    .good-suit{
+        margin:8px 0; 
+    }
+    .select-suit1,.select-suit2{
+        display:block;
+        border-radius:14px;
+        border:1px solid #FF4D4D;
+        height:33px;
+        width:100%;
+        line-height: 35px;
+        margin: 0 7px 9px 0 !important;
+        padding:0 4px;
+    }
+    .good-service{
+        margin:8px 0; 
+    }
+    .select-service1,.select-service2{
+        display:block;
+        border-radius:14px;
+        border:1px solid #D7D7D7;
+        height:33px;
+        width:100%;
+        line-height: 35px;
+        margin: 0 7px 9px 0 !important;
+        padding:0 4px;
+    }
+    .recommend{
+        background-color: #efeff4;
+        padding:10px 10px 10px 12px;
+        height: auto;
+        overflow: hidden;
+        color: #333;
+    }
+    .text-recommend{
+        font-size:16px;
+        line-height:24px;
+        height:24px;
+    }
+    .good-slide{
+        overflow-x:auto;
+        ul{
+            li{
+                float:left;
+                margin-right:10px;
+                img{
+                    width:100px;
+                }
+            }
+        }
+    }
+
 
 }
